--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -46,6 +46,7 @@ rules:
   no-unmodified-loop-condition: warn
   no-unneeded-ternary: warn
   no-unused-expressions: warn
+  no-unused-vars: warn
   no-use-before-define: error
   no-useless-call: error
   no-useless-computed-key: warn
