Switch to using the Vue build process
In preparation for "componentization".

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,7 +5,7 @@ env:
 extends: eslint:recommended
 parserOptions:
   ecmaVersion: 2018
-  # sourceType: module
+  sourceType: module
 rules:
   # no-confusing-arrow: [error, {allowParens: true}]
   arrow-body-style: warn
