--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   browser: true
   es6: true
 extends: eslint:recommended
+parser: vue-eslint-parser
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
